--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
+server.port= 8081
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/cinema
 spring.datasource.username=root
 spring.datasource.password=Anhem@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#SendMail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ducpa2002@gmail.com
+spring.mail.password=guirdebfkzfhdoma
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
+jwt.expiration= 86400
+jwt.expirationRefreshToken = 172800
+jwt.secretKey=64911a854bcc2ca37a479bfbffe
